3_grafana/5-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  labels:
    app: grafana
  # annotations:
  #   kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: devopscheats.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: grafana-service
            port: 
              number: 3000
  tls:
    - hosts:
      - devopscheats.com
      secretName: grafana-secret
